--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
     "main": "server.js",
     "scripts": {
         "start": "node server/server.js",
-        "server": "nodemon server/server.js"
+        "server": "nodemon server/server.js",
+        "client": "npm run dev --prefix simple-rsvp",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "Nathan Alexander",
     "license": "MIT",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
+        "concurrently": "^7.6.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.3"
     },
     "devDependencies": {
