--- a/simple-rsvp/package.json
+++ b/simple-rsvp/package.json
@@ -13,13 +13,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.0",
+    "date-fns": "^2.29.3",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "requirejs": "^2.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
