--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.7.3"
+        "mongoose": "^6.7.3",
+        "react-s3": "^1.3.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
