--- a/simple-rsvp/package.json
+++ b/simple-rsvp/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.0",
+    "buffer": "^6.0.3",
     "date-fns": "^2.29.3",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
