--- a/simple-rsvp/package.json
+++ b/simple-rsvp/package.json
@@ -18,7 +18,9 @@
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
