--- a/simple-rsvp/package.json
+++ b/simple-rsvp/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.40.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
+    "react-s3": "^1.3.1",
     "react-toastify": "^9.1.1",
     "requirejs": "^2.3.6"
   },
